connect to Yelp API

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -31,11 +31,11 @@ input:focus {
 /* App Styles */
 
 .App {
-  font-family: "Work Sans", sans-serif;
+  font-family: 'Work Sans', sans-serif;
 }
 
 h1 {
-  padding: 0.66rem 0;
+  padding: .66rem 0;
   text-align: center;
   background-color: #cca353;
   font-family: Poppins, sans-serif;
